--- a/Css/styles.css
+++ b/Css/styles.css
@@ -42,15 +42,15 @@ body {
 
 .particulas {
     position: fixed;
-    top: 0;
+    top: 10;
     right: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
     opacity: 0.5;
     background:
-        radial-gradient(circle at 10% 20%, var(--brand-gray-light) 0%, transparent 20%),
-        radial-gradient(circle at 90% 80%, var(--brand-green) 0%, transparent 20%),
+        radial-gradient(circle at 90% 80%, var(--brand-gray-light) 0%, transparent 20%),
+        radial-gradient(circle at 10% 20%, var(--brand-green) 0%, transparent 20%),
         var(--brand-dark);
 }
 
@@ -115,7 +115,9 @@ body {
     width: 350px;
     height: 350px;
     border-radius: 25%;
-    box-shadow: 10px 14px 20px 5px var(--brand-green-light);
+    box-shadow: 10px 10px 15px 0px rgba(130,137,168,0.7);
+    -webkit-box-shadow: 10px 10px 15px 0px rgba(130,137,168,0.7);
+    -moz-box-shadow: 10px 10px 15px 0px rgba(130,137,168,0.7);
     border: 4px solid var(--brand-green);
     animation: float 3s ease-in-out infinite;
     filter: grayscale(0.2) contrast(1.1);
@@ -892,4 +894,40 @@ h1 {
 .project-paragraph{
     color: var(--brand-gray-light);
     line-height: 1.25rem;
+}
+
+body > footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+    background-color: var(--brand-gray);
+}
+
+footer:last-of-type{
+    margin-top: 40px;
+}
+
+footer p{
+    color: var(--brand-gray-light);
+}
+
+.social {
+    display: flex;
+    gap: 10px;
+}
+
+.social img{
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: space-between;
+    object-fit: contain;
+    transition: 0.3s ease-in;
+}
+
+.social a:hover img{
+    transform: scale(1.1);
 }
