--- a/Css/styles.css
+++ b/Css/styles.css
@@ -180,7 +180,7 @@ p{
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width:20px;
     height: 0; 
     background: linear-gradient(to top, #fe4701, #ff0054);
     border-radius: 0 0 10px 10px;
